--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -36,8 +36,8 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		title="@{documented.name} Changelog"
 		shortTitle="Changelog"
 		tocLevels="1"
-		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2021-03-18T05:02:06-05:00"
+		datePublished="2016-10-30T18:16:13-05:00"
+		dateModified="2021-05-22T13:07:02-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -46,7 +46,11 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{project.scm.url}"
-			/>
+			>
+				<ul>
+					<li>Updated to <ao:a rel="nofollow" href="https://www.oracle.com/java/technologies/javaee/javaeetechnologies.html#javaee7">Java™ EE 7 Web Profile</ao:a> (Servlet 3.1, JSP 2.3, EL 3.0, and JSTL 1.2).</li>
+				</ul>
+			</changelog:release>
 		</c:if>
 
 		<changelog:release
@@ -153,7 +157,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.14.0"
-			datePublished="2019-10-11T17:18:51-0500"
+			datePublished="2019-10-11T17:18:51-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -179,7 +183,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.13.0"
-			datePublished="2019-06-19T09:19:35-0500"
+			datePublished="2019-06-19T09:19:35-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -198,7 +202,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.12.0"
-			datePublished="2019-04-19T05:37:16-0500"
+			datePublished="2019-04-19T05:37:16-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -216,7 +220,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.11.0"
-			datePublished="2017-07-19T22:41:51-0500"
+			datePublished="2017-07-19T22:41:51-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -232,7 +236,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.10.0"
-			datePublished="2016-11-15T17:45:15-0600"
+			datePublished="2016-11-15T17:45:15-06:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -252,7 +256,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.9.0"
-			datePublished="2016-10-20T18:20:00-0500"
+			datePublished="2016-10-20T18:20:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -279,7 +283,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.8.1"
-			datePublished="2016-10-10T19:37:00-0500"
+			datePublished="2016-10-10T19:37:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -293,7 +297,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.8.0"
-			datePublished="2016-10-04T20:39:00-0500"
+			datePublished="2016-10-04T20:39:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -335,7 +339,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.7"
-			datePublished="2016-09-11T15:34:00-0500"
+			datePublished="2016-09-11T15:34:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -352,7 +356,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.6"
-			datePublished="2016-09-03T21:48:00-0500"
+			datePublished="2016-09-03T21:48:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -365,7 +369,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.5"
-			datePublished="2016-08-28T20:33:00-0500"
+			datePublished="2016-08-28T20:33:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -384,7 +388,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.4"
-			datePublished="2016-08-21T16:57:00-0500"
+			datePublished="2016-08-21T16:57:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -401,7 +405,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.3"
-			datePublished="2016-08-19T14:39:00-0500"
+			datePublished="2016-08-19T14:39:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -434,7 +438,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.2"
-			datePublished="2016-08-09T22:22:00-0500"
+			datePublished="2016-08-09T22:22:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -447,7 +451,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.1"
-			datePublished="2016-08-07T23:39:00-0500"
+			datePublished="2016-08-07T23:39:00-05:00"
 			groupId="com.aoindustries"
 			artifactId="ao-web-page-servlet"
 			scmUrl="@{project.scm.url}"
@@ -460,7 +464,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.0"
-			datePublished="2016-08-07T10:49:00-0500"
+			datePublished="2016-08-07T10:49:00-05:00"
 			groupId="com.aoindustries"
 			artifactId="ao-web-page-servlet"
 			scmUrl="@{project.scm.url}"
