--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -22,7 +22,7 @@ You should have received a copy of the GNU Lesser General Public License
 along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses />.
 -->
 <jsp:root
-	xmlns:ao="https://aoindustries.com/ao-taglib/"
+	xmlns:ao="https://oss.aoapps.com/taglib/"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:changelog="https://semanticcms.com/changelog/taglib/"
 	xmlns:core="https://semanticcms.com/core/taglib/"
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-05:00"
-		dateModified="2021-05-26T06:36:49-05:00"
+		dateModified="2021-05-31T08:58:51-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -45,6 +45,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				version="@{project.version}"
 				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
+				repository="https://oss.sonatype.org/content/repositories/snapshots/"
 				scmUrl="@{project.scm.url}"
 			>
 				<ul>
@@ -142,15 +143,15 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 						<li>Better shielding non-concurrency sub-requests during captures with request and response wrappers.</li>
 					</ol>
 				</li>
-				<li>Moved Servlet subrequest utilities to new <ao:a href="https://aoindustries.com/ao-servlet-subrequest/">AO Servlet Subrequest</ao:a> project.</li>
-				<li>Using <ao:a href="https://aoindustries.com/ao-fluent-html/">AO Fluent HTML</ao:a> for HTML generation.</li>
+				<li>Moved Servlet subrequest utilities to new <ao:a href="https://oss.aoapps.com/servlet-subrequest/">AO Servlet Subrequest</ao:a> project.</li>
+				<li>Using <ao:a href="https://oss.aoapps.com/fluent-html/">AO Fluent HTML</ao:a> for HTML generation.</li>
 				<li>Optimized ServletContext attribute initialization and concurrency.</li>
 				<li>
 					<ao:a href="apidocs/com/semanticcms/core/servlet/impl/PageImpl.html">PageImpl</ao:a> now establishes
-					a page context for <ao:a href="https://aoindustries.com/ao-web-resources/">AO Web Resources</ao:a>.
+					a page context for <ao:a href="https://oss.aoapps.com/web-resources/">AO Web Resources</ao:a>.
 				</li>
 				<li>
-					Now configures <ao:a href="https://aoindustries.com/ao-web-resources/">AO Web Resources</ao:a>
+					Now configures <ao:a href="https://oss.aoapps.com/web-resources/">AO Web Resources</ao:a>
 					for <ao:a href="apidocs/com/semanticcms/core/servlet/Theme.html">Theme</ao:a>
 					and <ao:a href="apidocs/com/semanticcms/core/servlet/View.html">View</ao:a>.
 				</li>
@@ -169,11 +170,11 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		>
 			<ul>
 				<li>Element IDs may now contain the full range of <ao:a href="https://www.w3.org/TR/REC-xml/#id">valid XML identifiers</ao:a>.</li>
-				<li>Added absolute URL and <ao:a href="https://aoindustries.com/ao-servlet-util/apidocs/com/aoindustries/servlet/http/Canonical.html">Canonical URL</ao:a> support.</li>
+				<li>Added absolute URL and <ao:a href="https://oss.aoapps.com/servlet-util/apidocs/com/aoindustries/servlet/http/Canonical.html">Canonical URL</ao:a> support.</li>
 				<li>
-					Activated new filter <ao:a href="https://aoindustries.com/ao-servlet-last-modified/apidocs/com/aoindustries/servlet/lastmodified/LastModifiedCacheControlFilter.html">LastModifiedCacheControlFilter</ao:a>
+					Activated new filter <ao:a href="https://oss.aoapps.com/servlet-last-modified/apidocs/com/aoindustries/servlet/lastmodified/LastModifiedCacheControlFilter.html">LastModifiedCacheControlFilter</ao:a>
 					that adds a <ao:a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Cache-Control">cache-control</ao:a> header to any request with a 
-					<ao:a href="https://aoindustries.com/ao-servlet-last-modified/apidocs/com/aoindustries/servlet/lastmodified/LastModifiedServlet.html#LAST_MODIFIED_PARAMETER_NAME">LAST_MODIFIED_PARAMETER_NAME</ao:a>
+					<ao:a href="https://oss.aoapps.com/servlet-last-modified/apidocs/com/aoindustries/servlet/lastmodified/LastModifiedServlet.html#LAST_MODIFIED_PARAMETER_NAME">LAST_MODIFIED_PARAMETER_NAME</ao:a>
 					parameter.  Defaults to a very aggressive setting of public, one-year, allowing stale, and immutable.
 				</li>
 				<li>Defined MIME types, with a <code>UTF-8</code> default, in shared <code>web-fragment.xml</code></li>
@@ -231,7 +232,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
-				<li>New release for bug fixes in underlying <ao:a href="https://aoindustries.com/ao-encoding/">AO Encoding</ao:a> library.</li>
+				<li>New release for bug fixes in underlying <ao:a href="https://oss.aoapps.com/encoding/">AO Encoding</ao:a> library.</li>
 				<li>Nodes, including both pages and elements, now have properties.</li>
 				<li>Updated dependencies.</li>
 				<li>May now specify <code>anchor</code> to link to non-SemanticCMS-element targets.</li>
@@ -247,7 +248,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
-				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
+				<li>New <ao:a href="https://oss.aoapps.com/parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
 				<li>Added support for dateCreated, datePublished, dateModified, and dateReviewed.</li>
 				<li>Project documentation moved to per-project book in <core:link book="/" page="/" /> format.</li>
 				<li>Added changelog as top-level project link.</li>
